--- a/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
@@ -32,6 +32,8 @@
 	<string>N_.glif</string>
 	<key>O</key>
 	<string>O_.glif</string>
+	<key>Ocounter</key>
+	<string>Ocounter_.glif</string>
 	<key>P</key>
 	<string>P_.glif</string>
 	<key>Q</key>
