--- a/wood/TypeMedia1314-WoodType.ufo/lib.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/lib.plist
@@ -287,6 +287,7 @@
 		<string>nine</string>
 		<string>one_unit</string>
 		<string>half_unit</string>
+		<string>Ocounter</string>
 	</array>
 </dict>
 </plist>
