--- a/wood/TypeMedia1314-WoodType.ufo/lib.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/lib.plist
@@ -80,6 +80,7 @@
 				<string>nine</string>
 				<string>one_unit</string>
 				<string>half_unit</string>
+				<string>Ocounter</string>
 			</array>
 			<key>type</key>
 			<string>glyphList</string>
