added slot for Z
wanna make that now

--- a/wood/TypeMedia1314-WoodType.ufo/lib.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/lib.plist
@@ -80,6 +80,7 @@
 				<string>nine</string>
 				<string>one_unit</string>
 				<string>half_unit</string>
+				<string>Ocounter</string>
 			</array>
 			<key>type</key>
 			<string>glyphList</string>
@@ -127,6 +128,12 @@
 		<string>one_unit</string>
 		<string>half_unit</string>
 		<string>Ocounter</string>
+		<string>Gcounter</string>
+		<string>Zcounter</string>
+		<string>Acounter</string>
+		<string>Ccounter</string>
+		<string>ecounter</string>
+		<string>Xcounter</string>
 	</array>
 </dict>
 </plist>
