B added and N bifurcates separated

--- a/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
@@ -54,6 +54,8 @@
 	<string>Y_.glif</string>
 	<key>Z</key>
 	<string>Z_.glif</string>
+	<key>bifurcates</key>
+	<string>bifurcates.glif</string>
 	<key>ecounter</key>
 	<string>ecounter.glif</string>
 	<key>eight</key>
