--- a/wood/TypeMedia1314-WoodType.ufo/lib.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/lib.plist
@@ -128,6 +128,7 @@
 		<string>half_unit</string>
 		<string>Xcounter</string>
 		<string>Ccounter</string>
+		<string>bifurcates</string>
 	</array>
 </dict>
 </plist>
