--- a/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
@@ -6,6 +6,8 @@
 	<string>Acounter_.glif</string>
 	<key>B</key>
 	<string>B_.glif</string>
+	<key>B-counter</key>
+	<string>B-counter_.glif</string>
 	<key>Ccounter</key>
 	<string>Ccounter_.glif</string>
 	<key>D</key>
