--- a/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
@@ -28,6 +28,8 @@
 	<string>L_.glif</string>
 	<key>M</key>
 	<string>M_.glif</string>
+	<key>M-counter</key>
+	<string>M-counter_.glif</string>
 	<key>N</key>
 	<string>N_.glif</string>
 	<key>O</key>
