--- a/wood/TypeMedia1314-WoodType.ufo/lib.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/lib.plist
@@ -132,6 +132,7 @@
 		<string>Ccounter</string>
 		<string>bifurcates</string>
 		<string>pattern01</string>
+		<string>M-counter</string>
 		<string>B-counter</string>
 	</array>
 </dict>
