--- a/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
@@ -90,5 +90,7 @@
 	<string>two.glif</string>
 	<key>zero</key>
 	<string>zero.glif</string>
+	<key>pattern01</key>
+	<string>pattern01.glif</string>
 </dict>
 </plist>
