--- a/wood/TypeMedia1314-WoodType.ufo/lib.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/lib.plist
@@ -140,7 +140,10 @@
 		<string>B-counter</string>
 		<string>D-counter</string>
 		<string>three-counter</string>
+		<string>Hsides</string>
 		<string>C.mark</string>
+		<string>Zcounter</string>
+		<string>Hcounter</string>
 	</array>
 </dict>
 </plist>
