--- a/wood/TypeMedia1314-WoodType.ufo/lib.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/lib.plist
@@ -93,6 +93,11 @@
 				<string>Hcounter</string>
 				<string>T.mark</string>
 				<string>G.mark</string>
+				<string>ampersand.mark</string>
+				<string>S.mark</string>
+				<string>R.mark</string>
+				<string>N.mark</string>
+				<string>J.mark</string>
 			</array>
 			<key>type</key>
 			<string>glyphList</string>
