--- a/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/glyphs/contents.plist
@@ -68,6 +68,8 @@
 	<string>T_.mark.glif</string>
 	<key>U</key>
 	<string>U_.glif</string>
+	<key>U.mark</key>
+	<string>U_.mark.glif</string>
 	<key>V</key>
 	<string>V_.glif</string>
 	<key>W</key>
