--- a/wood/TypeMedia1314-WoodType.ufo/lib.plist
+++ b/wood/TypeMedia1314-WoodType.ufo/lib.plist
@@ -162,6 +162,7 @@
 		<string>R.mark</string>
 		<string>N.mark</string>
 		<string>J.mark</string>
+		<string>U.mark</string>
 	</array>
 </dict>
 </plist>
