--- a/TypeMedia1314-WoodTypeWide.ufo/glyphs/contents.plist
+++ b/TypeMedia1314-WoodTypeWide.ufo/glyphs/contents.plist
@@ -82,6 +82,8 @@
 	<string>comma.glif</string>
 	<key>eight</key>
 	<string>eight.glif</string>
+	<key>exclam</key>
+	<string>exclam.glif</string>
 	<key>five</key>
 	<string>five.glif</string>
 	<key>four</key>
